src/rabbit/manifests/rabbit-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: default
spec:
  selector:
    matchLabels:
      app: rabbitmq # has to match .spec.template.metadata.labels
  serviceName: "not-applicable"
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - name: http
              protocol: TCP
              containerPort: 15672
            - name: amqp
              protocol: TCP
              containerPort: 5672
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
